--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.jdbcUrl=jdbc:mysql://192.168.11.130:3306/ssm_crud?useSSL=true
+jdbc.jdbcUrl=jdbc:mysql://192.168.11.188:3306/family_web?useUnicode=true&characterEncoding=UTF-8
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.user=root
-jdbc.password=peak1
+jdbc.user=peak
+jdbc.password=peak
